n8n/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auto.stefanmuraru.com
spec:
  parentRefs:
    - name: private
      namespace: gateway-system
      sectionName: https
  hostnames:
    - auto.stefanmuraru.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n-app
          port: 5678
